# adhyayanx-platform

./: .env.example  .gitignore  Dockerfile  README.md  STATUS.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: backend.yml
adx_platform/contracts/: __init__.py  business_object.py  capability.py  command.py  event.py  policy.py  repository.py  workflow.py
adx_platform/events/: __init__.py  bus.py  handlers.py  outbox.py  publisher.py  subscriber.py
adx_platform/identity/: __init__.py  commands.py  events.py  handlers.py  router.py  service.py
adx_platform/organizations/: __init__.py  commands.py  events.py  handlers.py  router.py  schemas.py  service.py
api/: main.py
api/dependencies/: container.py
api/middleware/: error_handler.py  logging.py
api/routers/: __init__.py
app/kernel/: bootstrap.py
backend/: .dockerignore  Dockerfile  dump_users.py  pyproject.toml  seed_db.py  test_course.py
backend/keys/: dev-private.pem  dev-public.pem
backend/scratch/: dump_openapi.py  dump_routes.py
discovery/: README.md
discovery/academy/: operation-discovery.md
docs/: architecture-l1.md
docs/aps/: runtime-spec.md
docs/architecture/: principles.md  system-overview.md
docs/frontend/: architecture.md
foundation/: __init__.py  types.py
frontend/: package-lock.json  package.json
frontend/src/: middleware.ts
infrastructure/postgres/: __init__.py  database.py  identity_repository.py  organization_repository.py  outbox_repository.py  unit_of_work.py
kernel/: __init__.py  bootstrap.py  container.py  discovery.py  lifecycle.py
(+295 files in other folders)
